kubernetes/apps/expense-splitter/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: expense-splitter
  namespace: expense-splitter
spec:
  parentRefs:
    - name: eg-public
      namespace: envoy-gateway-system
      sectionName: https-public
  hostnames:
    - "splitr.michaelmuzafarov.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend
          port: 3000
    - backendRefs:
        - name: frontend
          port: 8080
